<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/icSemiTransparent" android:title="@string/icon_semitrans"
        android:icon="@drawable/ic_semitransparent" app:showAsAction="ifRoom"/>
    <item android:id="@+id/icVoice" android:title="@string/icon_Voice"
        android:icon="@drawable/ic" app:showAsAction="ifRoom"/>
    <item android:id="@+id/iteTransparent" android:title="@string/lbl_transparent"/>
    <item android:id="@+id/iteSemitransparent" android:title="@string/lbl_semitransparent"/>
    <item android:id="@+id/iteopaque" android:title="@string/lbl_opaque"/>
    <item android:id="@+id/iteBlack" android:title="@string/lbl_black"/>
    <item android:id="@+id/iteWhite" android:title="@string/lbl_white"/>
    <item android:id="@+id/iteRed" android:title="@string/lbl_Red"/>
    <item android:id="@+id/iteGreen" android:title="@string/lbl_Green"/>
    <item android:id="@+id/iteBlue" android:title="@string/lbl_Blue"/>
    <item android:id="@+id/iteCyan" android:title="@string/lbl_cyan"/>
    <item android:id="@+id/iteMagenta" android:title="@string/lbl_magenta"/>
    <item android:id="@+id/iteYellow" android:title="@string/lbl_yellow"/>
    <item android:id="@+id/iteAbout_of" android:title="@string/lbl_about_fo"/>
</menu>